--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>😋</title>
 </head>
 <body>
     欢迎来到8#503-1的床铺
 </body>
+
 </html>
