--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>😋</title>
+    <style>
+        body {
+            font-family: "微软雅黑", Arial, sans-serif;
+            background-color: #f6f8fa;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 600px;
+            margin: 40px auto;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            padding: 32px;
+        }
+        h1 {
+            color: #2c3e50;
+            margin-bottom: 16px;
+        }
+        p {
+            color: #555;
+            line-height: 1.7;
+        }
+        img {
+            width: 70%;
+            max-width: 320px;
+            border-radius: 6px;
+            margin: 24px 0;
+            display: block;
+        }
+    </style>
 </head>
 <body>
-    欢迎来到8#503-1的床铺
+    <div class="container">
+        <h1>欢迎来到 8#503-1 的床铺</h1>
+        <img src="avatar.jpg" alt="床铺图片">
+        <p>
+            这里是8号楼503-1床铺的介绍页面。<br>
+            床铺环境舒适，采光良好，配备基础生活设施。<br>
+            欢迎新同学入住，体验温馨的宿舍生活！
+        </p>
+        <p>
+            <strong>床铺特色：</strong><br>
+            - 独立储物空间<br>
+            - 靠窗位置，空气流通<br>
+            - 静谧环境，适合学习与休息
+        </p>
+    </div>
 </body>
-
 </html>
