--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p>
             这里是8号楼503-1床铺的介绍页面。<br>
             床铺环境舒适，采光良好，配备基础生活设施。<br>
-            欢迎新同学入住，体验温馨的宿舍生活！
+            <b>欢迎新同学入住，体验温馨的宿舍生活！</b>
         </p>
         <p>
             <strong>床铺特色：</strong><br>
