--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         p {
             color: #555;
-            line-height: 1.7;
+            line-height: 2.2;
         }
         img {
             width: 70%;
@@ -85,7 +85,7 @@
             <strong>个人事迹：</strong><br>
             人体闹钟，总会在早晨咚的一声跳下来吵醒室友<br>
             喜欢吃火鸡面，经常将寝室熏的全是酱油味<br>
-            极少洗澡，身上的衣服从春天穿到冬天，睡觉也不脱衣服<br>
+            极少洗澡，身上的衣服从春天穿到冬天，睡觉也不脱衣服，身上的味道及床铺周围堪比生化武器<br>
             床铺万年不洗，曾经甩床单使寝室出现丁达尔效应且室友全员生病<br>
         </p>
         <figure>
