--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         p {
             color: #555;
-            line-height: 2.2;
+            line-height: 1.7;
         }
         img {
             width: 70%;
@@ -76,17 +76,17 @@
             style="user-drag: none; user-select: none;">
         <p>
             <strong>生平简介：</strong><br>
-            姓名：又师，可爱称为师哥<br>
-            籍贯：四川省达州市，后移居至广东省<br>
-            生性怪癖，喜欢独来独往<br>
-            曾因为将舍友说话内容透露给女生而遭舍友孤立（汉奸这一块）<br>
+            姓名：又师，可爱称为师哥。<br>
+            籍贯：四川省达州市，后移居至广东省。<br>
+            生性怪癖，喜欢独来独往。<br>
+            曾因为将舍友说话内容透露给女生而遭舍友孤立（汉奸这一块）。<br>
         </p>
         <p>
             <strong>个人事迹：</strong><br>
-            人体闹钟，总会在早晨咚的一声跳下来吵醒室友<br>
-            喜欢吃火鸡面，经常将寝室熏的全是酱油味<br>
-            极少洗澡，身上的衣服从春天穿到冬天，睡觉也不脱衣服，身上的味道及床铺周围堪比生化武器<br>
-            床铺万年不洗，曾经甩床单使寝室出现丁达尔效应且室友全员生病<br>
+            人体闹钟，总会在早晨咚的一声跳下来吵醒室友。<br>
+            喜欢吃火鸡面，经常将寝室熏的全是酱油味。<br>
+            极少洗澡，身上的衣服从春天穿到冬天，睡觉也不脱衣服，身上的味道及床铺周围堪比生化武器。<br>
+            床铺万年不洗，曾经甩床单使寝室出现丁达尔效应且室友全员生病。<br>
         </p>
         <figure>
         <img src="1.jpg" alt="大头贴" 
